--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -7,15 +7,19 @@
 <section class="articles">
 
     {% for article in articles %}
-        <article>
-            <h2>{{ article.title }}</h2>
-            <div class="metadata">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }} dans la catégorie {{ article.category.title }}</div>
-            <div class="content">
-                <img src={{ article.image }} alt="">
-                <p>{{ article.content | raw }}</p>
-                <a href="{{ path('blog_show', {'id': article.id }) }}" class="btn btn-primary">Lire la suite</a>
+        <div class="col mb-5">
+            <div class="row">
+                <article>
+                    <h2>{{ article.title }}</h2>
+                    <div class="metadata">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }} dans la catégorie <b>{{ article.category.title }}</b></div>
+                    <div class="content">
+                        <img src={{ article.image }} alt="">
+                        <p>{{ article.content | raw }}</p>
+                        <a href="{{ path('blog_show', {'id': article.id }) }}" class="btn btn-primary">Lire la suite</a>
+                    </div>
+                </article>
             </div>
-        </article>
+        </div>
     {% endfor %}
     
 </section>
