--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -4,7 +4,10 @@
     <h1>Création d'un compte utilisateur</h1>
 
     {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr': {'placeholder': 'Nom d\'utilisateur'}} ) }}
+    {{ form_row(form.email, {'label': 'Adresse email', 'attr': {'placeholder': 'Adresse email'}} ) }}
+    {{ form_row(form.password, {'label': 'Mot de passe', 'attr': {'placeholder': 'Mot de passe'}} ) }}
+    {{ form_row(form.confirm_password, {'label': 'Confirmation du mot de passe', 'attr': {'placeholder': 'Confirmez votre mot de passe'}} ) }}
 
     <button type="submit" class="btn btn-success">Enregistrer
     
