--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -3,16 +3,36 @@
 {% block body %}
 <h1>{{ title }}</h1>
 
-<p>Quam quidem partem accusationis admiratus sum et moleste tuli potissimum esse Atratino datam. 
+<button class="btn btn-light" id="bdr">+</button>
+<p class="hidden" style="display: none;">Quam quidem partem accusationis admiratus sum et moleste tuli potissimum esse Atratino datam. 
 Neque enim decebat neque aetas illa postulabat neque, id quod animadvertere poteratis, 
 pudor patiebatur optimi adulescentis in tali illum oratione versari. 
 Vellem aliquis ex vobis robustioribus hunc male dicendi locum suscepisset; 
 aliquanto liberius et fortius et magis more nostro refutaremus istam male dicendi licentiam. 
 Tecum, Atratine, agam lenius, quod et pudor tuus moderatur orationi meae et meum erga te parentemque tuum beneficium tueri debeo.</p>
 
-<p>Quibus occurrere bene pertinax miles explicatis ordinibus parans hastisque 
+<p class="hidden" style="display: none;">Quibus occurrere bene pertinax miles explicatis ordinibus parans hastisque 
 feriens scuta qui habitus iram pugnantium concitat et dolorem proximos iam gestu terrebat 
 sed eum in certamen alacriter consurgentem revocavere ductores rati intempestivum anceps 
 subire certamen cum haut longe muri distarent, quorum tutela securitas poterat in solido locari cunctorum.</p>
 
+{% endblock %}
+{% block javascripts %}
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+<script>
+$(document).ready(function() {
+    console.log( "ready!" );
+
+    $i = 0;
+
+    $( "button#bdr" ).on( "click", function() {
+    $i ++;
+    ($i%2 == 1) ? $("p.hidden").show("fast") : $("p.hidden").hide("slow");
+    });
+
+});
+</script>
 {% endblock %}
