--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -10,7 +10,7 @@
         <div class="col mb-5">
             <div class="row">
                 <article>
-                    <h2>{{ article.title }}</h2>
+                    <h2>{{ article.getTitle() }}</h2>
                     <div class="metadata">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }} dans la catégorie <b>{{ article.category.title }}</b></div>
                     <div class="content">
                         <img src={{ article.image }} alt="">
